Fixed gallery video not playing on mobile devices. Changed relative paths to absolute.

--- a/styles/home.css
+++ b/styles/home.css
@@ -14,6 +14,11 @@ header {
     height: 80vh;
 }
 
+h2{
+    font-family: 'CircularStd';
+    text-align: center;
+}
+
 .content {
     font-family: 'Kano';
     background-color: #f8f8f8;
@@ -29,7 +34,7 @@ header {
 
 .content img {
     width: 35vw;
-    margin: 2em 0;
+    margin: 0 0 2em;
     box-shadow: 0px 0px 8px rgba(32, 32, 32, 0.425);
     border-radius: 2px;
 }
@@ -50,6 +55,6 @@ header {
         padding: 2.5em;
     }
     .content img {
-        width: 100%;
+        width: 18em;
     }
 }
